# FWX-SDK

./: LICENSE  README.md  examples_usage.ipynb  pyproject.toml  requirements.txt
fwx/: constant.py  contract.py  perp.py  types.py  w3.py
